# autoPDF2SQLizer

./: .env.example  .gitignore  accuracy.py  app.py  db_provisioner.py  deploy.sh  doc_intel.py  evaluate.py  extraction_code_db.py  instance.sh  kb_backend.py  knowledge_base.py  metadata.py  process.py  program.md  pyproject.toml  requirements.txt  sandbox.py  sql_gen.py  startup.sh  wiggum.sh  wiggum_cloud.py  wiggum_loop.py  wiggum_prompts.py  wiggum_routes.py  wiggum_trigger.py
.azure/: config
.github/workflows/: deploy.yml  wiggum.yml
auth/: __init__.py  config.py  dependencies.py  models.py
docs/: architecture.html
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DocResultCard.tsx  DropZone.tsx  FileChip.tsx  LoginScreen.tsx  NestedResultsTable.tsx  OnboardingScreen.tsx  OptimizationBanner.tsx  OrgSwitcher.tsx  ProjectSelector.tsx  ProjectSwitcher.tsx  ResultsTable.tsx  SchemaGenerator.tsx  StatusMessage.tsx  TopBar.tsx  UploadArea.tsx  WiggumPanel.tsx
frontend/src/hooks/: useDocumentWorkflow.ts  useOptimizationStatus.ts  useWiggumStatus.ts
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: ChatTab.tsx  DatabaseTab.tsx  DocumentsTab.tsx  EvaluateTab.tsx  ExtractTab.tsx  GroundTruthTab.tsx  KnowledgeBaseTab.tsx  (+4 more)
prompts/: contract.md  financial_statement.md  invoice.md  medical_form.md
schemas/: contract.json  financial_statement.json  invoice.json  medical_form.json
schemas/custom/: yearly_financials.json
static/: index.html
